manifests-failed/kubedash-3.0.1.tgz-manifest.yaml
---
# Source: kubedash/templates/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-kubedash
  labels:
    app: kubedash
    helm.sh/chart: kubedash-3.0.1
    app.kubernetes.io/name: kubedash
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "3.0.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: kubedash
spec:
  selector:
    app: kubedash
    app.kubernetes.io/name: kubedash
    app.kubernetes.io/instance: my-release
  ports:
  - name: http
    port: 8000
    protocol: TCP
    targetPort: 8000
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
---
# Source: kubedash/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-kubedash
  labels:
    app: kubedash
    helm.sh/chart: kubedash-3.0.1
    app.kubernetes.io/name: kubedash
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "3.0.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: kubedash
    checksum/config: 5272872c93a3cd2f2bd6fd846b0000afd62578fcdf6f609f10ed06f28683d18
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: "100%"
      maxUnavailable: "100%"
  selector:
    matchLabels:
      app: kubedash
      app.kubernetes.io/name: kubedash
      app.kubernetes.io/instance: my-release
  template:
    metadata:
      labels:
        app: kubedash
        helm.sh/chart: kubedash-3.0.1
        app.kubernetes.io/name: kubedash
        app.kubernetes.io/instance: my-release
        app.kubernetes.io/version: "3.0.0"
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/part-of: kubedash
        checksum/config: 5272872c93a3cd2f2bd6fd846b0000afd62578fcdf6f609f10ed06f28683d18
    spec:
      serviceAccountName: kubedash-admin
      securityContext:
        fsGroup: 10001
        fsGroupChangePolicy: OnRootMismatch
        runAsNonRoot: true
        runAsUser: 10001
      containers:
      - name: kubedash
        image: "devopstales/kubedash:3.0.0"
        imagePullPolicy: Always
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - all
        livenessProbe:
          httpGet:
            path: /healthz/live
            port: 8000
          initialDelaySeconds: 5
          timeoutSeconds: 1
        readinessProbe:
          httpGet:
            path: /healthz/ready
            port: 8000
          initialDelaySeconds: 5
          timeoutSeconds: 1
        volumeMounts:
        - name: cache
          mountPath: "/code/kubedash/database"
        ports:
        - containerPort: 8000
          protocol: TCP
          name: http
      volumes:
      - name: cache
        persistentVolumeClaim:
            claimName: my-release-kubedash-db
---
# Source: kubedash/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-release-kubedash-ingress
  labels:
    app: kubedash
    helm.sh/chart: kubedash-3.0.1
    app.kubernetes.io/name: kubedash
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "3.0.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: kubedash
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/server-snippets: |
      location / {
        proxy_set_header Upgrade $http_upgrade;
        proxy_http_version 1.1;
        proxy_set_header X-Forwarded-Host $http_host;
        proxy_set_header X-Forwarded-Proto $scheme;
        proxy_set_header X-Forwarded-For $remote_addr;
        proxy_set_header Host $host;
        proxy_set_header Connection "upgrade";
        proxy_cache_bypass $http_upgrade;
      }
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - kubedash.mydomain.intra
  rules:
    - host: "kubedash.mydomain.intra"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-release-kubedash
                port: 
                  number: 8000
